--- a/src/sass/components/_socials.sass
+++ b/src/sass/components/_socials.sass
@@ -101,7 +101,7 @@
 				+sm
 					font-size: 12px
 	
-	&_product
+	&_product-card
 		display: inline-block
 		vertical-align: middle
 		margin-top: 8px
