--- a/src/templates/components/_product.jade
+++ b/src/templates/components/_product.jade
@@ -79,7 +79,7 @@
 				+e.A(href="#!").suggest-btn.btn Варианты вышивок
 	+e.container.container
 		+e.sect._color
-			+e.sect-title._sm
+			+e.sect-title
 				+icon('icon-shirts', 'product__sect-icon')
 				+e.SPAN Печать на майках, футболках, толстовках и любой одежде.
 			+e.sect-links
