--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -1,3 +1,128 @@
+/* buttons
+	----------------------------------- */
+.btn
+	position: relative
+	display: inline-block
+	min-width: 340px
+	padding: 16px 70px 16px 5px
+	+f("psr",22)
+	color: $white
+	outline: none
+	text-decoration: none
+	text-align: center
+	background-color: #52C0E9
+	border-bottom: 1px solid #E7E7E7
+	+lg
+		min-width: 280px
+		font-size: 20px
+		padding: 13px 55px 13px 5px
+	+md
+		min-width: 238px
+		padding: 11px 41px 11px 5px
+		font-size: 17px
+	+sm
+		min-width: 210px
+		padding: 6px 34px 6px 5px
+		font-size: 15px
+	&::after
+		content: ''
+		position: absolute
+		top: calc(50% - 18px)
+		right: 32px
+		z-index: 1
+		+s('btn_arr')
+		transform: scale(.9)
+		+lg
+			right: 13px
+		+md
+			right: 10px
+			transform: scale(.7)
+		+sm
+			right: 6px
+			transform: scale(.6)
+	&:hover
+		background-color: #128FCD
+		border-bottom-color: #F9BF84
+	&:hover::after
+		+s('btn_arr-hvr')
+	&:active
+		background-color: #24568D
+		border-bottom-color: #E63833
+	&:active::after
+		+s('btn_arr-act')
+	&_dark
+		background-color: #1768BF
+		border-bottom-color: #F9BF84
+		&::after
+			+s('btn_dark')
+		&:hover
+			background-color: #00BBFF
+			border-bottom-color: #F9BF84
+		&:hover::after
+			+s('btn_dark-hvr')
+		&:active
+			background-color: #24568D
+			border-bottom-color: #E63833
+
+.send-btn
+	position: relative
+	padding: 0 70px 0 5px
+	min-width: 232px
+	line-height: 45px
+	height: 45px
+	color: #fff
+	background: #6ca5db
+	text-align: right
+	border-bottom: 2px solid #a7b8c9
+	+f("ver",19)
+	overflow: hidden
+	&::after
+		position: absolute
+		top: -4px
+		right: -4px
+		+s('send')
+		content: ''
+		transform: scale(.87)
+		+md
+			top: -7px
+			right: -8px
+			transform: scale(.73)
+	&:hover
+		background-color: #63afed
+		border-bottom-color: #ffff74
+	&:hover::after
+		+s('send-hvr')
+	&:active
+		background-color: #415c89
+		border-bottom-color: #a95a63
+	&:active::after
+		+s('send-act')
+
+.btn-cart
+	position: relative
+	padding: 17px 90px 17px 50px
+	font-size: 21px
+	color: #fff
+	background: #2AB1E2
+	border-bottom: 2px solid #E3E3E3
+	&::after
+		position: absolute
+		top: -5px
+		right: -6px
+		+sr('cart_add')
+		transform: scale(.85)
+		content: ''
+	&:hover
+		background: #01B6F8
+		border-bottom-color: #FFBE77
+	&:hover::after
+		+sr('cart_add-hvr')
+	&:active
+		background: #23568A
+		border-bottom-color: #E63E2D
+	&:active::after
+		+sr('cart_add-act')
+
 /* about text
 	----------------------------------- */
 .about-text
@@ -213,10 +338,10 @@
 			font-size: 29px
 			
 	&_product
-		margin: 60px 0 70px
+		margin: 20px 0 60px
 		
 	&_watched
-		margin: 40px 0
+		margin: 30px 0
 		background: none
 		
 /* sub-menu
@@ -237,3 +362,41 @@
 			
 	&_default
 		margin-top: auto
+		
+/* rating
+	----------------------------------- */
+.rating
+	display: inline-block
+	vertical-align: middle
+	&__text
+		margin-bottom: 3px
+		color: #1C487A
+	&__in
+		display: flex
+		flex-direction: row-reverse
+		justify-content: center
+	&__input
+		display: none
+	&__input ~ &__icon .rating__star
+		fill: #DBDBDB
+		stroke: #DBDBDB
+	&__input:checked ~ &-icon .rating__star,
+	&__input:checked &-icon .rating__star
+		fill: #FFED00
+		stroke: #FFED00
+	&__icon:hover .rating__star,
+	&__icon:hover ~ &__icon .rating__star
+		fill: #C7CBCF
+		stroke: #DBDBDB
+	&__input:checked &__icon:hover .rating__star,
+	&__input:checked ~ &__icon .rating__star
+		fill: #FFED00
+		stroke: #FFED00
+	&__icon
+		display: inline-block
+		cursor: pointer
+	&__star
+		font-size: 23px
+		
+	&_product-card
+		margin-right: 15px
