--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -1,6 +1,6 @@
 .product
 	&__container
-		margin: 0 auto 50px
+		margin: 0 auto 40px
 		max-width: 1560px
 		+lg
 			margin: 0 auto 35px
@@ -17,6 +17,8 @@
 		padding: 1px 30px 0 25px
 		margin-bottom: 30px
 		background-color: #EBECEC
+		+md
+			min-height: 31px
 		&::after
 			content: ''
 			position: absolute
@@ -41,7 +43,7 @@
 			.product__sect-count
 				background: #DFE6EB
 		&_has-filter
-			margin-bottom: 35px
+			margin-bottom: 30px
 			padding: 4px 0 4px 15px
 			clear: both
 		&_watched
@@ -219,9 +221,9 @@
 		flex-basis: 100%
 		flex-wrap: wrap
 		.product__item
-			flex-basis: 23%
-			width: 23%
-			margin-bottom: 35px
+			flex-basis: 23.5%
+			width: 23.5%
+			margin-bottom: 30px
 	&__examples_watched
 		width: 100%
 		flex-basis: 100%
@@ -356,8 +358,8 @@
 				height: 100%
 				object-fit: contain
 			&_xs
-				height: 122px
-				width: 122px
+				height: 118px
+				width: 118px
 		&-info
 			margin-top: 20px
 			color: #2f2e2d
@@ -615,52 +617,20 @@
 			.decor__line::after
 				right: -17px
 				border-width: 16px 16px 0 0
-	&__rating
-		display: inline-block
-		vertical-align: middle
-		margin-right: 20px
-		&-text
-			margin-bottom: 3px
-			font-size: 18px
-			color: #1C487A
-		&-in
-			display: flex
-			flex-direction: row-reverse
-			justify-content: center
-		&-input
-			display: none
-		&-input ~ &-icon .product__rating-star
-			fill: #DBDBDB
-			stroke: #DBDBDB
-		&-input:checked ~ &-icon .product__rating-star,
-		&-input:checked &-icon .product__rating-star
-			fill: #FFED00
-			stroke: #FFED00
-		&-icon:hover .product__rating-star,
-		&-icon:hover ~ &-icon .product__rating-star
-			fill: #C7CBCF
-			stroke: #DBDBDB
-		&-input:checked &-icon:hover .product__rating-star,
-		&-input:checked ~ &-icon .product__rating-star
-			fill: #FFED00
-			stroke: #FFED00
-		&-icon
-			display: inline-block
-			cursor: pointer
-		&-star
-			font-size: 23px
-			
+				
 	&__card
-		margin-bottom: 45px
+		margin-bottom: 40px
 		display: block
 		+clr
 		&-col
 			float: left
-			width: 50%
+			&:nth-child(1)
+				width: 52%
 			&:nth-child(2)
+				width: 48%
 				padding-left: percentage(19 / 1224)
 	&__descr-title
-		padding: 2px 15px
+		padding: 4px 15px
 		margin-bottom: 15px
 		font-size: 22px
 		line-height: 1.3
@@ -730,31 +700,32 @@
 		display: block
 		
 	&__look
-		margin-top: 20px
+		margin-top: 15px
 	&__look-pic img
 		width: 100%
 	&__look-pictures
-		margin: 25px 0 40px
+		margin: 25px 0 35px
 		display: flex
 		justify-content: space-between
 	
-	&__props-row
-		font-size: 0
+	&__props
 		+clr
-	&__actions
+	&__props-col
 		float: left
-		width: percentage(410 / 655)
+		&:nth-child(1)
+			width: 64%
+		&:nth-child(2)
+			width: 36%
+			padding-left: 1%
+	&__actions
 		display: flex
 		justify-content: space-between
 		align-items: center
+		margin-bottom: 8px
 	&__hashtags
-		float: left
-		margin-left: 7px
-		width: percentage(234 / 655)
 	&__hashtags-link
 		display: block
-		padding: 0 15px
-		font-size: 19px
+		padding: 0 10px
 		color: #00306B
 		background: #F5F5F5
 		&:hover
@@ -764,8 +735,9 @@
 	&__calc-btn
 		position: relative
 		max-width: 350px
-		min-height: 56px
+		min-height: 55px
 		font-size: 19px
+		line-height: 1.2
 		padding: 6px 65px 5px 40px
 		background: #EEF5FC
 		border-bottom: 1px solid #E1EFF6
