--- a/src/sass/components/_socials.sass
+++ b/src/sass/components/_socials.sass
@@ -102,6 +102,4 @@
 					font-size: 12px
 	
 	&_product-card
-		display: inline-block
-		vertical-align: middle
-		margin-top: 8px
+		margin-bottom: 5px
