--- a/src/templates/category-page.jade
+++ b/src/templates/category-page.jade
@@ -258,55 +258,66 @@ block content
 							+e.card
 								+e.card-col
 									+e.look
-										+e.look-pic
-											+e.IMG(src='img/content/look-img.jpg')
-										+e.look-pictures
-											+e.item-pic._xs.decor._xs
+										+e.look-view.js-look-view
+											+e.look-pic
+												+e.IMG(src='img/content/look-img-1.jpg')
+											+e.look-pic
+												+e.IMG(src='img/content/look-img-2.jpg')
+											+e.look-pic
+												+e.IMG(src='img/content/look-img-1.jpg')
+											+e.look-pic
+												+e.IMG(src='img/content/look-img-2.jpg')
+											+e.look-pic
+												+e.IMG(src='img/content/look-img-1.jpg')
+										+e.look-thumbs.js-look-thumbs
+											+e.item-pic._thumb.decor._xs
 												+e.IMG(src='img/content/look-1.jpg')
 												.decor__line
-											+e.item-pic._xs.decor._xs
+											+e.item-pic._thumb.decor._xs
 												+e.IMG(src='img/content/look-2.jpg')
 												.decor__line
-											+e.item-pic._xs.decor._xs
+											+e.item-pic._thumb.decor._xs
 												+e.IMG(src='img/content/look-3.jpg')
 												.decor__line
-											+e.item-pic._xs.decor._xs
+											+e.item-pic._thumb.decor._xs
 												+e.IMG(src='img/content/look-4.jpg')
 												.decor__line
-											+e.item-pic._xs.decor._xs
+											+e.item-pic._thumb.decor._xs
 												+e.IMG(src='img/content/look-5.jpg')
 												.decor__line
 									+e.props
 										+e.props-col
-											+e.actions
+											+e.props-row
 												+e.BUTTON(type='button').wish-btn
 												+e.BUTTON(type='button').calc-btn
 													+icon('icon-arr-def', 'product__calc-icon')
 													+e.SPAN Рассчитать свой - заказной дизайн
-											+b.rating._product-card
-												+e.text Оцените данный товар:
-												+e.in
-													+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-6')
-														+icon('icon-star', 'rating__star')
-													+e.INPUT.input(id='product-rating-5' value='5' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-5')
-														+icon('icon-star', 'rating__star')
-													+e.INPUT.input(id='product-rating-4' value='4' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-4')
-														+icon('icon-star', 'rating__star')
-													+e.INPUT.input(id='product-rating-3' value='3' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-3')
-														+icon('icon-star', 'rating__star')
-													+e.INPUT.input(id='product-rating-2' value='2' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-2')
-														+icon('icon-star', 'rating__star')
-													+e.INPUT.input(id='product-rating-1' value='1' type='radio' name='product-rating')
-													+e.LABEL.icon(for='product-rating-1')
-														+icon('icon-star', 'rating__star')
+											+e.props-row
+												+b.rating._product-card
+													+e.text Оцените данный товар:
+													+e.in.js-rating
+														+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-6')
+															+icon('icon-star', 'rating__star')
+														+e.INPUT.input(id='product-rating-5' value='5' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-5')
+															+icon('icon-star', 'rating__star')
+														+e.INPUT.input(id='product-rating-4' value='4' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-4')
+															+icon('icon-star', 'rating__star')
+														+e.INPUT.input(id='product-rating-3' value='3' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-3')
+															+icon('icon-star', 'rating__star')
+														+e.INPUT.input(id='product-rating-2' value='2' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-2')
+															+icon('icon-star', 'rating__star')
+														+e.INPUT.input(id='product-rating-1' value='1' type='radio' name='product-rating')
+														+e.LABEL.icon(for='product-rating-1')
+															+icon('icon-star', 'rating__star')
 
-											- var socialsClass = '_product-card'
-											include components/_socials
+												- var socialsClass = '_product-card'
+												include components/_socials
+
 										+e.props-col
 											+e.hashtags
 												+e.A.hashtags-link(href='#!') #полотенце в подарок
@@ -358,6 +369,7 @@ block content
 										+e.A.link-sale(href='#!').link-sale
 											+e.SPAN Цены на опт.
 									+e.BUTTON.btn-cart.btn-cart(type='submit') ДОБАВИТЬ В КОРЗИНУ
+
 							+e.sect._has-filter
 								+e.sect-title
 									+icon('icon-lovers', 'product__sect-icon')
@@ -641,9 +653,12 @@ block content
 											+e.SPAN.sect-count 11
 							+e.examples._watched
 								+e.item
-									+e.item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
-										.decor__line
+									+e.item-pic-wrap.js-product-item-pic
+										+e.A(href='#!').item-pic.decor
+											+e.IMG.img(src="img/content/prod-11.jpg")
+											.decor__line
+										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
+											+icon('icon-loupe','product__zoom-icon')
 									+e.item-info
 										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
 											= ' '
@@ -653,9 +668,12 @@ block content
 											+e.SPAN.price-current 400&nbsp;
 												+icon('icon-ruble','product__val-icon')
 								+e.item
-									+e.item-pic.decor
-										+e.IMG.img(src="img/content/prod-12.jpg")
-										.decor__line
+									+e.item-pic-wrap.js-product-item-pic
+										+e.A(href='#!').item-pic.decor
+											+e.IMG.img(src="img/content/prod-12.jpg")
+											.decor__line
+										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
+											+icon('icon-loupe','product__zoom-icon')
 									+e.item-info
 										+e.item-title Любая вышивка на  полотенце, под  «Золото».
 										+e.item-descr Размер: 250х100 мм
@@ -664,9 +682,12 @@ block content
 											+e.SPAN.price-current 400&nbsp;
 												+icon('icon-ruble','product__val-icon')
 								+e.item
-									+e.item-pic.decor
-										+e.IMG.img(src="img/content/prod-10.jpg")
-										.decor__line
+									+e.item-pic-wrap.js-product-item-pic
+										+e.A(href='#!').item-pic.decor
+											+e.IMG.img(src="img/content/prod-10.jpg")
+											.decor__line
+										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
+											+icon('icon-loupe','product__zoom-icon')
 									+e.item-info
 										+e.item-title Полотенце -зайчик!
 											= ' '
@@ -676,9 +697,12 @@ block content
 											+e.SPAN.price-current 150&nbsp;
 												+icon('icon-ruble','product__val-icon')
 								+e.item
-									+e.item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
-										.decor__line
+									+e.item-pic-wrap.js-product-item-pic
+										+e.A(href='#!').item-pic.decor
+											+e.IMG.img(src="img/content/prod-11.jpg")
+											.decor__line
+										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
+											+icon('icon-loupe','product__zoom-icon')
 									+e.item-info
 										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
 											= ' '
@@ -688,9 +712,12 @@ block content
 											+e.SPAN.price-current 400&nbsp;
 												+icon('icon-ruble','product__val-icon')
 								+e.item
-									+e.item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
-										.decor__line
+									+e.item-pic-wrap.js-product-item-pic
+										+e.A(href='#!').item-pic.decor
+											+e.IMG.img(src="img/content/prod-11.jpg")
+											.decor__line
+										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
+											+icon('icon-loupe','product__zoom-icon')
 									+e.item-info
 										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
 											= ' '
