--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -226,7 +226,10 @@
 		.product__item
 			flex-basis: 23.5%
 			width: 23.5%
+			min-height: 425px
 			margin-bottom: 30px
+		.product__item-pic
+			height: 265px
 	&__examples_watched
 		width: 100%
 		flex-basis: 100%
@@ -234,11 +237,11 @@
 			min-height: 386px
 			flex-basis: 20%
 			width: 20%
-			padding: 12px
-			border: 12px solid #DFDFDF
+			padding: 10px
+			border: 10px solid #DFDFDF
 			border-right: none
 			&:last-child
-				border-right: 12px solid #DFDFDF
+				border-right: 10px solid #DFDFDF
 			img
 				width: 100%
 		.product__item-info
@@ -268,9 +271,15 @@
 			right: -4px
 			top: -5px
 		.product__item-pic
-			height: 227px
+			height: 210px
 		.decor__line
-			width: 82%
+			width: 84%
+			&::before
+				right: -12px
+				border-width: 0 0 17px 13px
+			&::after
+				right: -33px
+				border-width: 18px 20px 0 0
 		.product__zoom
 			width: 45px
 			height: 45px
@@ -285,8 +294,8 @@
 		bottom: 10px
 		z-index: 5
 		display: block
-		width: 60px
-		height: 60px
+		width: 54px
+		height: 54px
 		text-align: center
 		background: rgba(#E6EEFF, .8)
 		transition: transform .45s .2s, opacity .45s .2s, background 0s
@@ -686,9 +695,7 @@
 		text-align: right
 	&__price
 		min-width: 152px
-		padding: 0 10px
-		height: 80px
-		line-height: 80px
+		padding: 15px 10px
 		+f('psb', 30)
 		color: #00306B
 		text-align: center
@@ -703,7 +710,7 @@
 	&__link-sale
 		display: inline-block
 		margin: 5px 0 0 25px
-		+f('psb', 24)
+		+f('psb', 23)
 		span
 			border-bottom: 3px dashed #FCBD7E
 	&__btn-cart
