--- a/src/templates/category-page.jade
+++ b/src/templates/category-page.jade
@@ -398,7 +398,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -417,7 +417,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-12.jpg")
+										+e.IMG.item-img(src="img/content/prod-12.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -435,7 +435,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-10.jpg")
+										+e.IMG.item-img(src="img/content/prod-10.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -450,7 +450,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -469,7 +469,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -488,7 +488,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-12.jpg")
+										+e.IMG.item-img(src="img/content/prod-12.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -506,7 +506,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-10.jpg")
+										+e.IMG.item-img(src="img/content/prod-10.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -521,7 +521,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -540,7 +540,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -559,7 +559,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -577,7 +577,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -592,7 +592,7 @@ block content
 							+e.item
 								+e.item-pic-wrap.js-product-item-pic
 									+e.A(href='#!').item-pic.decor
-										+e.IMG.img(src="img/content/prod-11.jpg")
+										+e.IMG.item-img(src="img/content/prod-11.jpg")
 										.decor__line
 									+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 										+icon('icon-loupe','product__zoom-icon')
@@ -651,7 +651,7 @@ block content
 								+e.item
 									+e.item-pic-wrap.js-product-item-pic
 										+e.A(href='#!').item-pic.decor
-											+e.IMG.img(src="img/content/prod-11.jpg")
+											+e.IMG.item-img(src="img/content/prod-11.jpg")
 											.decor__line
 										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 											+icon('icon-loupe','product__zoom-icon')
@@ -666,7 +666,7 @@ block content
 								+e.item
 									+e.item-pic-wrap.js-product-item-pic
 										+e.A(href='#!').item-pic.decor
-											+e.IMG.img(src="img/content/prod-12.jpg")
+											+e.IMG.item-img(src="img/content/prod-12.jpg")
 											.decor__line
 										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 											+icon('icon-loupe','product__zoom-icon')
@@ -680,7 +680,7 @@ block content
 								+e.item
 									+e.item-pic-wrap.js-product-item-pic
 										+e.A(href='#!').item-pic.decor
-											+e.IMG.img(src="img/content/prod-10.jpg")
+											+e.IMG.item-img(src="img/content/prod-10.jpg")
 											.decor__line
 										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 											+icon('icon-loupe','product__zoom-icon')
@@ -695,7 +695,7 @@ block content
 								+e.item
 									+e.item-pic-wrap.js-product-item-pic
 										+e.A(href='#!').item-pic.decor
-											+e.IMG.img(src="img/content/prod-11.jpg")
+											+e.IMG.item-img(src="img/content/prod-11.jpg")
 											.decor__line
 										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 											+icon('icon-loupe','product__zoom-icon')
@@ -710,7 +710,7 @@ block content
 								+e.item
 									+e.item-pic-wrap.js-product-item-pic
 										+e.A(href='#!').item-pic.decor
-											+e.IMG.img(src="img/content/prod-11.jpg")
+											+e.IMG.item-img(src="img/content/prod-11.jpg")
 											.decor__line
 										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 											+icon('icon-loupe','product__zoom-icon')
