--- a/src/templates/components/_product.jade
+++ b/src/templates/components/_product.jade
@@ -16,7 +16,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-1.jpg")
+							+e.IMG.item-img(src="img/content/prod-1.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-1_lg.jpg' data-fancybox='product-1')
 							+icon('icon-loupe','product__zoom-icon')
@@ -35,7 +35,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-2.jpg")
+							+e.IMG.item-img(src="img/content/prod-2.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-1')
 							+icon('icon-loupe','product__zoom-icon')
@@ -53,7 +53,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-3.jpg")
+							+e.IMG.item-img(src="img/content/prod-3.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
 							+icon('icon-loupe','product__zoom-icon')
@@ -96,7 +96,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-4.jpg")
+							+e.IMG.item-img(src="img/content/prod-4.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-4_lg.jpg' data-fancybox='product-2')
 							+icon('icon-loupe','product__zoom-icon')
@@ -115,7 +115,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-5.jpg")
+							+e.IMG.item-img(src="img/content/prod-5.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-5_lg.jpg' data-fancybox='product-2')
 							+icon('icon-loupe','product__zoom-icon')
@@ -133,7 +133,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-6.jpg")
+							+e.IMG.item-img(src="img/content/prod-6.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-2')
 							+icon('icon-loupe','product__zoom-icon')
@@ -180,7 +180,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-7.jpg")
+							+e.IMG.item-img(src="img/content/prod-7.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -194,7 +194,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-8.jpg")
+							+e.IMG.item-img(src="img/content/prod-8.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -212,7 +212,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-9.jpg")
+							+e.IMG.item-img(src="img/content/prod-9.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -245,7 +245,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-10.jpg")
+							+e.IMG.item-img(src="img/content/prod-10.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -259,7 +259,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-11.jpg")
+							+e.IMG.item-img(src="img/content/prod-11.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -277,7 +277,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-12.jpg")
+							+e.IMG.item-img(src="img/content/prod-12.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -313,7 +313,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-13.jpg")
+							+e.IMG.item-img(src="img/content/prod-13.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -327,7 +327,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-14.jpg")
+							+e.IMG.item-img(src="img/content/prod-14.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -345,7 +345,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-15.jpg")
+							+e.IMG.item-img(src="img/content/prod-15.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -386,7 +386,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-16.jpg")
+							+e.IMG.item-img(src="img/content/prod-16.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -400,7 +400,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-17.jpg")
+							+e.IMG.item-img(src="img/content/prod-17.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -414,7 +414,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-18.jpg")
+							+e.IMG.item-img(src="img/content/prod-18.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -458,7 +458,7 @@
 						+icon('icon-pencil')
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-19.jpg")
+							+e.IMG.item-img(src="img/content/prod-19.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -472,7 +472,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-20.jpg")
+							+e.IMG.item-img(src="img/content/prod-20.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
@@ -486,7 +486,7 @@
 				+e.item
 					+e.item-pic-wrap.js-product-item-pic
 						+e.A(href='#!').item-pic.decor
-							+e.IMG.img(src="img/content/prod-21.jpg")
+							+e.IMG.item-img(src="img/content/prod-21.jpg")
 							.decor__line
 						+e.A.zoom(href='img/content/prod-2_lg.jpg' data-fancybox='product-3')
 							+icon('icon-loupe','product__zoom-icon')
