--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -324,7 +324,6 @@
 		font-size: 33px
 		+md
 			font-size: 25px
-	// <============== item starts here ==============>
 	&__item
 		position: relative
 		padding-bottom: 36px
@@ -370,16 +369,17 @@
 				height: 240px
 			+md
 				height: 214px
-			img
-				width: 100%
-				height: 100%
-				object-fit: contain
 			&_thumb
 				height: 118px
 				width: 118px
 				cursor: pointer
 				&:not(:last-child)
 					margin-right: 12px
+		&-img
+			width: 100%
+			height: 100%
+			object-fit: contain
+			font-family: 'object-fit: contain;'
 		&-info
 			margin-top: 20px
 			color: #2f2e2d
@@ -662,8 +662,6 @@
 		margin-bottom: 20px
 		&:last-child
 			margin-bottom: 0
-	&__buy
-		margin: 5px 0 0
 	&__buy-in
 		display: flex
 		justify-content: space-between
